fix: Correcting import typing scrits

--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 
   <title>Teste Técnico</title>
 </head>
+
 <body>
-  <main class="container mt-5">
+  <main class="container mt-5 text-center">
     <button id="btn-register" class="btn btn-primary">Cadastro</button>
     <button id="btn-login" class="btn btn-primary">Login</button>
     <button id="btn-update" class="btn btn-primary">Edição de Dados</button>
     <button id="btn-orders" class="btn btn-primary">Listagem de Pedidos</button>
   </main>
 
-  <script src="./main.js"></script>
+  <script type="module" src="js/main.js"></script>
 </body>
 </html>
